# rob301_lab_startercode

camera/: CMakeLists.txt  package.xml
camera/launch/: camera.launch
camera/nodes/: camera_mono.py  camera_rgb.py
final_project/: CMakeLists.txt  package.xml
final_project/nodes/: final_project.py
lab1/: CMakeLists.txt  package.xml
lab1/nodes/: odometry.py
lab2/: CMakeLists.txt  package.xml
lab2/nodes/: lab2.py
lab3/: CMakeLists.txt  package.xml
lab3/nodes/: lab3.py
lab4/: CMakeLists.txt  package.xml
lab4/launch/: lab4_turtlebot.launch
lab4/nodes/: noisy_vel_publisher.py  scan_angle_publisher.py
