<?xml version="1.0"?>
<package format="2">
  <name>lab2</name>
  <version>1.2.0</version>
  <description>
    Starter code for Lab 2 of ROB 301: Introduction to Robotics.
  </description>
  <license>Apache 2.0</license>
  <author email="kkjong@robotis.com">Gilbert</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <maintainer email="kkjong@robotis.com">Gilbert</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_example</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
