<?xml version="1.0"?>
<package format="2">
  <name>lab4</name>
  <version>1.0.0</version>
  <description>
    Starter code for Lab 4 of ROB 301: Introduction to Robotics.
  </description>
  <license>Apache 2.0</license>
  <author email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</author>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
